# haskell-spriter-test

./: README.md  spriter-test.cabal  stack.yaml
res/CharacterTest/: CharacterTest.autosave.scml  CharacterTest.scml  CharacterTest.scon  NewProject.autosave.scml
res/squares/: NewProject.autosave.scml  Square.autosave.scml  Square.scon
src/: Main.cpp  Main.hs  SpriterHelpers.hpp  SpriterTypes.hs  jsonspriterfileattributewrapper.h  jsonspriterfiledocumentwrapper.cpp  jsonspriterfiledocumentwrapper.h  jsonspriterfileelementwrapper.h
